sim-validator-assignment/src/snapshots/sim_validator_assignment__validator__tests__new_ordered_seats.snap
---
source: src/validator.rs
expression: new_ordered_seats(validators)
info:
  - num_blocks: 1000
    num_shards: 4
    seats_per_shard: 2
    stake_per_seat: 100
    max_malicious_stake_per_shard:
      - 1
      - 3
  - "validators:"
  - - account_id: validator_0
      stake: 500
      is_malicious: false
      num_seats: 5
      total_stake_share:
        - 5
        - 18
    - account_id: validator_1
      stake: 310
      is_malicious: true
      num_seats: 3
      total_stake_share:
        - 31
        - 180
    - account_id: validator_2
      stake: 90
      is_malicious: false
      num_seats: 0
      total_stake_share:
        - 1
        - 20
---
- validator:
    account_id: validator_0
    stake: 500
    is_malicious: false
    num_seats: 5
    total_stake_share:
      - 5
      - 18
- validator:
    account_id: validator_0
    stake: 500
    is_malicious: false
    num_seats: 5
    total_stake_share:
      - 5
      - 18
- validator:
    account_id: validator_0
    stake: 500
    is_malicious: false
    num_seats: 5
    total_stake_share:
      - 5
      - 18
- validator:
    account_id: validator_0
    stake: 500
    is_malicious: false
    num_seats: 5
    total_stake_share:
      - 5
      - 18
- validator:
    account_id: validator_0
    stake: 500
    is_malicious: false
    num_seats: 5
    total_stake_share:
      - 5
      - 18
- validator:
    account_id: validator_1
    stake: 310
    is_malicious: true
    num_seats: 3
    total_stake_share:
      - 31
      - 180
- validator:
    account_id: validator_1
    stake: 310
    is_malicious: true
    num_seats: 3
    total_stake_share:
      - 31
      - 180
- validator:
    account_id: validator_1
    stake: 310
    is_malicious: true
    num_seats: 3
    total_stake_share:
      - 31
      - 180

