sim-validator-assignment/src/snapshots/sim_validator_assignment__validator__tests__parse_raw_validator_input.snap
---
source: sim-validator-assignment/src/validator.rs
expression: population_stats
info:
  num_blocks: 1000
  num_shards: 4
  seats_per_shard: 2
  stake_per_seat: 100
  max_malicious_stake_per_shard:
    - 1
    - 3
  validator_data: ~
---
stake: 1800
malicious_stake: 410
seats: 17
malicious_seats: 4

